welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def comp(a:Int):Boolean = {return (a>9 && a<21)}
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
  val b = comp(n)
  if (outsideMode) return (!b || (n==10) || (n==1))
  return b